# serdev

./: .gitmodules  CMakeLists.txt  README.MD
example/common/: common.cmake  common.cpp  common.h
example/socket/: CMakeLists.txt  build.cmake
example/socket/client/: CMakeLists.txt  main.cpp
example/socket/inet/client/: CMakeLists.txt  main.cpp
example/socket/inet/server/: CMakeLists.txt  main.cpp
example/socket/server/: CMakeLists.txt  main.cpp
example/socket/unix/client/: CMakeLists.txt
example/socket/unix/server/: CMakeLists.txt  main.cpp
src/: Serial.cpp  Serial.hpp
src/io/: tty.cpp  tty.h  types.h
src/tty/: Ttydev.cpp  Ttydev.hpp
src/usocket/: USocketClientDev.cpp  USocketClientDev.hpp  USocketServDev.cpp  USocketServDev.hpp
src/utils/: sockets.cpp  sockets.h
